# WeatherApp

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
WeatherManager/: Day.cpp  Day.h  WeatherInfo.cpp  WeatherInfo.h  WeatherManager.cpp  WeatherManager.h
include/: ColorStr.h  Day.h  DayTable.h  Messages.h  Page.h  Pictures.h  WeatherApp.h  WeatherManager.h
resources/: config.omfl  languages.omfl
src/: ColorStr.cpp  DayTable.cpp  Messages.cpp  Page.cpp  Pictures.cpp  WeatherApp.cpp
